--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -2843,7 +2843,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Reductions</strong></span> are a powerful technique for <strong>operations that take collections as input and return a single element</strong>. They naturally arise in a wide range of contexts, such as when computing summary statistics &#40;e.g., averages, variances, or maxima of collections&#41;.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Reductions</strong></span> are a form of computation employed for <strong>operations that take collections as input and return a single element</strong>. They naturally arise in a wide range of contexts, such as when computing summary statistics &#40;e.g., averages, variances, or maxima of collections&#41;.</p>
 <p>The reduction process works by iteratively applying an operation to pairs of elements, accumulating the results at each step until the final output is obtained. For example, to compute <code>sum&#40;x&#41;</code> for a vector <code>x</code>, a reduction would start by adding the first two elements, then add the third element to the total, and continue this cumulative process until all elements have been summed.</p>
 <p>The method is particularly convenient when we need to transform a vector&#39;s elements prior to aggregating the result. By operating on scalars, <strong>reductions sidestep the need to materialize intermediate outputs</strong>, thus reducing memory allocations. This means that, if for example you have to compute <code>sum&#40;log.&#40;x&#41;&#41;</code>, a reduction would avoid the creation of the intermediate vector <code>log.&#40;x&#41;</code>.</p>
 <p>      </div>
