--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -3192,7 +3192,7 @@ foo&#40;x&#41; &#61; minimum&#40;a -&gt; 2 * a, x&#41;   #same output as minimum
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>All these functions additionally accept transforming functions that require multiple arguments. To incorporate this possibility, it&#39;s necessary to call the multiple variables using <code>zip</code>, and referring to each variable through indexes. We illustrate this below, where the transforming function is <code>x .* y</code>. </p>
+<p>All these functions additionally accept transforming functions that require multiple arguments. To incorporate this possibility, it&#39;s necessary to call the multiple variables using <code>zip</code>, and referring to each variable through indices. We illustrate this below, where the transforming function is <code>x .* y</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
