--- a/PAGES/09i_lazyBroadcasting/index.html
+++ b/PAGES/09i_lazyBroadcasting/index.html
@@ -2844,8 +2844,8 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>This section continues the analysis of lazy and eager operations as a means of reducing memory allocations. The focus now shifts to broadcasting operations, which strike a balance between code readability and performance. </p>
-<p>A key feature of broadcasting in Julia is their eager default behavior. This means that broadcasted operations compute their outputs immediately upon execution, inevitably leading to memory allocation when applied to objects such as vectors. The feature becomes especially relevant in scenarios with intermediate broadcasted operations, which can result in allocations that are potentially avoidable.</p>
-<p>To address the performance cost associated, we&#39;ll present various strategies. One approach highlights the notion of <strong>loop fusion</strong>, which allows multiple broadcasting operations to be combined into a single more efficient operation. After this, we&#39;ll explore the <code>LazyArrays</code> package, which evaluates broadcasting operations lazily.</p>
+<p>A key feature of broadcasting in Julia is its eager default behavior. This means that broadcasted operations compute their outputs immediately upon execution, inevitably leading to memory allocation when applied to objects such as vectors. The feature becomes especially relevant in scenarios with intermediate broadcasted operations, which can result in allocations that are potentially avoidable.</p>
+<p>To address the associated performance cost, we&#39;ll present various strategies. One approach highlights the notion of <strong>loop fusion</strong>, which allows multiple broadcasting operations to be combined into a single more efficient operation. After this, we&#39;ll explore the <code>LazyArrays</code> package, which evaluates broadcasting operations lazily.</p>
 <p>      </div>
     </div>
   </div>
@@ -2856,9 +2856,9 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>How Does Broadcasting Work?</h2></p>
 <p>Let&#39;s first examine the internal mechanics of broadcasting. Under the hood, broadcasting operations are converted into optimized for-loops during compilation, rendering the two approaches computationally equivalent. Essentially, broadcasting serves as syntactic sugar, eliminating the need for explicit for-loops. This allows users to write more concise and expressive code, without compromising performance. </p>
-<p>Despite this equivalence, you&#39;ll often notice performance differences in practice. These discrepancies are largely driven by compiler optimizations, rather than inherent differences between the two approaches. The reason is that, by supporting a broadcasted form, an operation reveals further information to the compiler about its underlying structure. In this way, the compiler is allowed to apply further optimizations. In contrast, for-loops are conceived as a more general construct, so that these additional assumptions shouldn&#39;t be taken for granted. </p>
+<p>Despite this equivalence, you&#39;ll often notice performance differences in practice. These discrepancies are largely driven by compiler optimizations, rather than inherent differences between the two approaches. The reason is that, by supporting a broadcasted form, an operation reveals further information to the compiler about its underlying structure. In this way, the compiler is allowed to apply further optimizations. In contrast, for-loops are conceived as a more general construct, and so these additional assumptions shouldn&#39;t be taken for granted. </p>
 <p>Note, though, that with careful manual optimization, for-loops can always match or surpass the performance of broadcasting. The following code snippets demonstrate this point. </p>
-<p>The first tab describes the operation being performed, while the second tab provides a rough translation of broadcasting&#39;s internal implementation. The third tab demonstrates the equivalence by writing a for-loop mirroring the exact code used in broadcasting. This is achieved by adding the <code>@inbounds</code> macro, which is automatically applied with broadcasting. The specific role of <code>@inbounds</code> will be discussed in a later section. Its sole inclusion here is to illustrate the equivalence between the two approaches once we account for it. </p>
+<p>The first tab describes the operation being performed, while the second tab provides a rough translation of broadcasting&#39;s internal implementation. The third tab demonstrates the equivalence by writing a for-loop mirroring the exact code used in broadcasting. This is achieved by adding the <code>@inbounds</code> macro, which is automatically applied with broadcasting. The specific role of <code>@inbounds</code> will be discussed in a later section. Its inclusion here is to illustrate the equivalence between the two approaches once we account for it. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3053,7 +3053,7 @@ foo&#40;a&#41;   &#61; term1&#40;a&#41; &#43; term2&#40;a&#41;</code></pre> </di
  </div></div>
 <p>  </p></details></div>
  <h4> Vector Operations Allocate and Break Loop Fusion </h4>
-<p>A common situation preventing loop fusion is when a single expression mixes broadcasting with vector operations. While combining these operations oftenly result in an error, <strong>some vector operations produce the same results as their broadcasting equivalents</strong>, thus precluding dimensional mismatches. For instance, adding two vectors with <code>&#43;</code> yields the same result as summing them element-wise with <code>.&#43;</code>.</p>
+<p>A common situation preventing loop fusion is when a single expression mixes broadcasting with vector operations. While combining these operations often result in an error, <strong>some vector operations produce the same results as their broadcasting equivalents</strong>, thus precluding dimensional mismatches. For instance, adding two vectors with <code>&#43;</code> yields the same result as summing them element-wise with <code>.&#43;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3106,7 +3106,7 @@ foo&#40;x,β&#41; &#61; x * β</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
  <h4> Omitting Dots Avoids Loop Fusion </h4>
-<p>Mixing vector operations and broadcasting is problematic for performance, since it prevents loop fusion and forces memory allocations. Going beyond the examples presented before, you can identify this issue when when the following conditions are met:</p>
+<p>Mixing vector operations and broadcasting is problematic for performance, since it prevents loop fusion and forces memory allocations. Going beyond the examples presented before, you can identify this issue when the following conditions are met:</p>
 <ul>
 <li><p>The final output requires combining multiple operations</p>
 </li>
@@ -3116,7 +3116,7 @@ foo&#40;x,β&#41; &#61; x * β</code></pre> </div></div>
 </li>
 </ul>
 <p>If those conditions hold, Julia partitions the work and computes each part separately, producing multiple temporary vectors and extra allocations.</p>
-<p>The following example illustrates this possibility in the extreme case where  <em>all</em> broadcasting dots <code>.</code> are omitted. The example demonstrates that, since vector operations aren&#39;t fused, the final output is obtained by separately calculating each intermediate operation. </p>
+<p>The following example illustrates this possibility in the extreme case where  <em>all</em> broadcasting dots <code>.</code> are omitted. The example demonstrates that, since vector operations aren&#39;t fused, the final output is obtained by calculating separately each intermediate operation. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3165,7 +3165,7 @@ end</code></pre> </div></div>
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The key takeaway from these examples is that <strong>guaranteeing loop fusion requires appending a dot to every operator and function to be broadcasted</strong>. Note this can be error-prone, especially in large expressions where a single missing dot can be easily overlooked. Fortunately, there are two alternatives that mitigate this risk. </p>
+<p>The key takeaway from these examples is that <strong>guaranteeing loop fusion requires appending a dot to every operator and function to be broadcasted</strong>. Note this can be error-prone, especially in large expressions where a single missing dot can be easily missed. Fortunately, there are two alternatives that mitigate this risk. </p>
 <p>One option is to prefix the expression with the macro <code>@.</code>, as shown below in the tab &quot;Equivalent 1&quot;. This ensures that  <em>all</em> operators and functions are broadcasted. An alternative solution is to combine all operations into a  <em>scalar</em> function, which you eventually broadcast. This is presented below in the tab &quot;Equivalent 2&quot;.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
